--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@
 				</TR>
 				<TR>
 					<TD ALIGN = "CENTER">
-						<A HREF = "https://www.facebook.com/IEEE.JECRCU" TARGET = "_blank"><I CLASS = "fa fa-facebook" STYLE = "font-size: 50px; width: 50px; color: #3B5998; background-color: #F5F5F5; border-radius: 50%; padding: 16px;"></I></A>
-						<A HREF = "https://www.twitter.com/IEEE_JECRCU" TARGET = "_blank"><I CLASS = "fa fa-twitter" STYLE = "font-size: 50px; width: 50px; color: #1DA1F2; background-color: #F5F5F5; border-radius: 50%; padding: 16px;"></I></A>
-						<A HREF = "https://instagram.com/ieee_jecrcu" TARGET = "_blank"><I CLASS = "fa fa-instagram" STYLE = "font-size: 50px; width: 50px; color: #C32AA3; background-color: #F5F5F5; border-radius: 50%; padding: 16px;"></I></A>
-						<A HREF = "https://linkedin.com/company/ieee-jecrcu" TARGET = "_blank"><I CLASS = "fa fa-linkedin" STYLE = "font-size: 50px; width: 50px; color: #007BB5; background-color: #F5F5F5; border-radius: 50%; padding: 16px;"></I></A>
+						<A HREF = "https://www.facebook.com/IEEE.JECRCU"><I CLASS = "fa fa-facebook" STYLE = "font-size: 50px; width: 50px; color: #3B5998; background-color: #F5F5F5; border-radius: 50%; padding: 16px;"></I></A>
+						<A HREF = "https://www.twitter.com/IEEE_JECRCU"><I CLASS = "fa fa-twitter" STYLE = "font-size: 50px; width: 50px; color: #1DA1F2; background-color: #F5F5F5; border-radius: 50%; padding: 16px;"></I></A>
+						<A HREF = "https://instagram.com/ieee_jecrcu"><I CLASS = "fa fa-instagram" STYLE = "font-size: 50px; width: 50px; color: #C32AA3; background-color: #F5F5F5; border-radius: 50%; padding: 16px;"></I></A>
+						<A HREF = "https://linkedin.com/company/ieee-jecrcu"><I CLASS = "fa fa-linkedin" STYLE = "font-size: 50px; width: 50px; color: #007BB5; background-color: #F5F5F5; border-radius: 50%; padding: 16px;"></I></A>
 					</TD>
 				</TR>
 				<TR>
