--- a/google-clsrm.html
+++ b/google-clsrm.html
@@ -21,7 +21,7 @@
 				<A HREF = "contact.html"> Contact Us </A>
 				<A HREF = "javascript:void(0);" STYLE = "font-size:15px;" CLASS = "icon" ONCLICK = "myFunction()"> &#9776; </A>
 			</DIV>
-			<IMG SRC = "Google_Classroom_Logo.png" STYLE = "padding: 8px; width: 100%;" ALIGN = "CENTER"></img> <br>
+			<IMG SRC = "Google_Classroom_Logo.png" CLASS = "img" ALIGN = "CENTER"></img> <br>
 			<P CLASS = "p">
 				Google Classroom is a <B CLASS = "special">Learning Management System (LMS)</B> developed by Google for schools that aims to simplify creating, distributing and grading assignments in a paperless way. It was introduced as a feature of <B CLASS = "special">G Suite for Education</B> on May 6, 2014, followed by its public release on August 12, 2014. In June 2015, Google announced a classroom <B CLASS = "special">Application Programming Interface (API)</B> and a share button for websites, allowing school administrators and developers to further engage with Google Classroom. In March 2017, Google opened Classroom to allow any personal Google users to join classes without the requirement of having a G Suite for Education account, and in April, it became possible for any personal Google user to create and teach a class.
 				<BR><BR>
